# Skill-Gap-Analysis

./: .gitignore  README.md  setup.sh
backend/: pyproject.toml
backend/app/services/: llm_service.py
frontend/: package-lock.json
frontend/src/pages/: EmployeePage.jsx
frontend/src/services/: api.js
frontend/src/styles/: index.css
