[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skill-gap-analyzer-backend"
version = "3.0.0"
description = "Skill Gap Analyzer & Course Recommender - FastAPI backend with RAG pipeline"
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = "yathish jadav" }]
license = { text = "Internal" }

dependencies = [
    # API
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "python-multipart==0.0.9",

    # Database
    "motor==3.5.0",
    "pymongo==4.8.0",

    # Vector Store
    "chromadb==0.5.5",

    # LLM & RAG
    "langchain==0.2.16",
    "langchain-text-splitters==0.2.4",
    "langchain-google-genai==1.0.10",
    "google-generativeai==0.7.2",

    # Embeddings
    "sentence-transformers==3.0.1",

    # File Processing
    "PyPDF2==3.0.1",
    "python-docx==1.1.2",

    # Utilities
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",
    "python-slugify==8.0.4",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
